--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,14 +14,16 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  background-color: rgb(152, 200, 241);
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
+  /* color: var(--foreground);
+  background: var(--background); */
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
 }
 
 * {
